# ML-OneDay-Course

./: .gitignore  1-Introduction_to_Machine_Learning.ipynb  3-Supervised-1-Regression.ipynb  3-Supervised-2-Classification.ipynb  4-Unsupervised-1-Clustering.ipynb  4-Unsupervised-2-Others.ipynb  5-In-Class-assignment.ipynb  CITATION.cff  COURSE_CONTENT.md  HOW_TO_CREATE_ENV.md  LICENSE  README.md  model.pkl  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
marimo_book/: .STRUCTURE.txt  0-Index.py  1-Introduction_to_Machine_Learning.py  2-Understanding_ML_Workflow.py  3-Supervised-1-Regression.py  3-Supervised-2-Classification.py  3-a-Supervised-Learning.py  4-Unsupervised-1-Clustering.py  4-Unsupervised-2-Others.py  5-In-Class-assignment.py  README.md  start_book.bat  start_book.sh
notebooks/: 1-Introduction_to_Machine_Learning.ipynb  2-Understanding_ML_Workflow.ipynb  3-Supervised-1-Regression.ipynb  3-Supervised-2-Classification.ipynb  4-Unsupervised-1-Clustering.ipynb  4-Unsupervised-2-Others.ipynb  5-In-Class-assignment.ipynb
